--- a/frontend/add-product.html
+++ b/frontend/add-product.html
@@ -1,44 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Add Product</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      background-color: #f4f4f4;
+    }
+    .container {
+      max-width: 500px;
+      margin-top: 50px;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-  <h1>Add New Product</h1>
-  <form id="addProductForm">
-    <label>Product Name: <input type="text" name="name" required></label><br><br>
-    <label>Description: <input type="text" name="description" required></label><br><br>
-    <label>Price: <input type="number" name="price" step="0.01" required></label><br><br>
-    <button type="submit">Add Product</button>
-  </form>
+  <div class="container">
+    <h3 class="text-center mb-4">Add New Product</h3>
+    <form id="addProductForm">
+      <div class="mb-3">
+        <label class="form-label">Product Name</label>
+        <input type="text" class="form-control" name="name" required />
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Description</label>
+        <input type="text" class="form-control" name="description" required />
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Price</label>
+        <input type="number" class="form-control" name="price" step="0.01" required />
+      </div>
+      <button type="submit" class="btn btn-success w-100">Add Product</button>
+    </form>
+    <div id="message" class="mt-3 text-center"></div>
+  </div>
 
   <script>
     document.getElementById('addProductForm').addEventListener('submit', async function(e) {
       e.preventDefault();
 
       const product = {
-        name: this.name.value,
-        description: this.description.value,
+        name: this.name.value.trim(),
+        description: this.description.value.trim(),
         price: parseFloat(this.price.value)
       };
+
+      if (!product.name || !product.description || isNaN(product.price)) {
+        document.getElementById("message").textContent = "Please fill all fields correctly.";
+        document.getElementById("message").style.color = "red";
+        return;
+      }
 
       try {
         const response = await fetch('http://localhost:3000/api/products', {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            'Authorization': `Bearer ${localStorage.getItem('token')}`
-          },
+          headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(product)
         });
 
         const data = await response.json();
-        alert(data.message || 'Product added successfully');
+        if (response.ok) {
+          document.getElementById("message").textContent = data.message || "Product added successfully!";
+          document.getElementById("message").style.color = "green";
+          this.reset();
+        } else {
+          document.getElementById("message").textContent = data.error || "Failed to add product.";
+          document.getElementById("message").style.color = "red";
+        }
       } catch (err) {
-        alert('Error adding product');
+        document.getElementById("message").textContent = "Error adding product.";
+        document.getElementById("message").style.color = "red";
       }
     });
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
