--- a/frontend/add-review.html
+++ b/frontend/add-review.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Add Product Review</title>
   <style>
     body {
@@ -46,6 +46,9 @@
   <label for="comment">Your Review:</label>
   <textarea id="comment" rows="4" required></textarea>
 
+  <label for="rating">Rating (1 to 5):</label>
+  <input type="number" id="rating" min="1" max="5" required>
+
   <button onclick="submitReview()">Submit Review</button>
 
   <script>
@@ -69,18 +72,19 @@
       const productId = document.getElementById('productSelect').value;
       const username = document.getElementById('username').value;
       const comment = document.getElementById('comment').value;
+      const rating = parseInt(document.getElementById('rating').value);
 
-      if (!productId || !username || !comment) {
+      if (!productId || !username || !comment || !rating) {
         return alert('Please fill out all fields');
       }
 
       try {
-        const res = await fetch(`http://localhost:3000/api/reviews/${productId}`, {
+        const res = await fetch('http://localhost:3000/api/reviews', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
           },
-          body: JSON.stringify({ username, comment })
+          body: JSON.stringify({ productId, username, comment, rating })
         });
 
         const data = await res.json();
@@ -88,11 +92,13 @@
           alert('Review submitted successfully!');
           document.getElementById('username').value = '';
           document.getElementById('comment').value = '';
+          document.getElementById('rating').value = '';
+          document.getElementById('productSelect').selectedIndex = 0;
         } else {
-          alert(data.message || 'Failed to submit review');
+          alert(data.error || 'Failed to submit review');
         }
       } catch (err) {
-        alert('Something went wrong while submitting the review');
+        alert('An error occurred while submitting the review');
       }
     }
 
