--- a/frontend/admin-view.html
+++ b/frontend/admin-view.html
@@ -3,15 +3,41 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Dashboard</title>
+  <title>Admin Dashboard - Optimized Cart</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .dashboard-container {
+      max-width: 600px;
+      margin: 80px auto;
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+    .dashboard-container h2 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    .dashboard-container .btn {
+      margin: 10px 0;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-  <h2>Welcome, Admin!</h2>
+  <div class="container">
+    <div class="dashboard-container">
+      <h2>Welcome, Admin!</h2>
 
-  <button onclick="location.href='add-product.html'">Add Product</button>
-  <button onclick="location.href='delete-product.html'">Delete Product</button>
-  <button onclick="location.href='delete-customer.html'">Delete Customer</button>
-  <button onclick="logout()">Logout</button>
+      <button class="btn btn-primary" onclick="location.href='add-product.html'">Add Product</button>
+      <button class="btn btn-warning" onclick="location.href='delete-product.html'">Delete Product</button>
+      <button class="btn btn-danger" onclick="location.href='delete-customer.html'">Delete Customer</button>
+      <button class="btn btn-secondary" onclick="logout()">Logout</button>
+    </div>
+  </div>
 
   <script>
     const token = localStorage.getItem("token");
@@ -22,17 +48,14 @@
       window.location.href = "login.html";
     }
 
-    document.getElementById("logoutBtn").addEventListener("click", () => {
+    function logout() {
       localStorage.removeItem("token");
       localStorage.removeItem("role");
+      alert("You have been logged out.");
       window.location.href = "login.html";
-    });
-    function logout() {
-    localStorage.removeItem("token");
-    localStorage.removeItem("role");
-    alert("You have been logged out.");
-    window.location.href = "login.html";
-  }
+    }
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
