--- a/frontend/delete-product.html
+++ b/frontend/delete-product.html
@@ -1,36 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Delete Product</title>
+  <!-- Bootstrap 5 CSS CDN -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-  <h1>Delete Product</h1>
-  <form id="deleteProductForm">
-    <label>Product ID: <input type="text" name="productId" required></label><br><br>
-    <button type="submit">Delete Product</button>
-  </form>
+<body class="bg-light">
+
+  <div class="container mt-5">
+    <div class="card shadow-sm mx-auto" style="max-width: 500px;">
+      <div class="card-body">
+        <h3 class="card-title mb-4 text-center">Delete Product</h3>
+
+        <form id="deleteProductForm">
+          <div class="mb-3">
+            <label for="productSelect" class="form-label">Select Product</label>
+            <select id="productSelect" class="form-select" required>
+              <option value="">-- Select a Product --</option>
+            </select>
+          </div>
+
+          <button type="submit" class="btn btn-danger w-100">Delete Product</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap 5 JS CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    document.getElementById('deleteProductForm').addEventListener('submit', async function(e) {
-      e.preventDefault();
+    async function loadProducts() {
+      try {
+        const res = await fetch('http://localhost:3000/api/products');
+        const products = await res.json();
 
-      const productId = this.productId.value.trim();
+        const select = document.getElementById('productSelect');
+        products.forEach(product => {
+          const option = document.createElement('option');
+          option.value = product._id;
+          option.textContent = `${product.name} (${product._id})`;
+          select.appendChild(option);
+        });
+      } catch (err) {
+        alert('Failed to load products.');
+      }
+    }
+
+    document.getElementById('deleteProductForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const productId = document.getElementById('productSelect').value;
+      if (!productId) return alert('Please select a product.');
 
       try {
-        const response = await fetch(`http://localhost:3000/api/products/${productId}`, {
-          method: 'DELETE',
-          headers: {
-            'Authorization': `Bearer ${localStorage.getItem('token')}`
-          }
+        const res = await fetch(`http://localhost:3000/api/products/${productId}`, {
+          method: 'DELETE'
         });
-
-        const data = await response.json();
+        const data = await res.json();
         alert(data.message || 'Product deleted successfully');
+        location.reload(); // Refresh the dropdown
       } catch (err) {
-        alert('Error deleting product');
+        alert('Error deleting product.');
       }
     });
+
+    loadProducts();
   </script>
 </body>
 </html>
