--- a/frontend/view-reviews.html
+++ b/frontend/view-reviews.html
@@ -2,50 +2,89 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>View Product Reviews</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <style>
+    body {
+      background-color: #f8f9fa;
+    }
+    .container {
+      max-width: 600px;
+      margin-top: 60px;
+      background-color: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-  <h2>View Product Reviews</h2>
+  <div class="container">
+    <h2 class="text-center mb-4">View Product Reviews</h2>
 
-  <form id="reviewForm">
-    <label for="productId">Product ID:</label>
-    <input type="text" id="productId" required />
-    <button type="submit">Get Reviews</button>
-  </form>
+    <form id="reviewForm">
+      <div class="mb-3">
+        <label for="productSelect" class="form-label">Select Product:</label>
+        <select id="productSelect" class="form-select" required>
+          <option value="">-- Choose a product --</option>
+        </select>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Get Reviews</button>
+    </form>
 
-  <ul id="reviewsList"></ul>
-  <button onclick="window.history.back()">Go Back</button>
+    <ul id="reviewsList" class="mt-4 list-group"></ul>
+    <button class="btn btn-secondary mt-4" onclick="window.history.back()">Go Back</button>
+  </div>
 
   <script>
-    const token = localStorage.getItem("token");
-    if (!token) {
-      alert("Unauthorized. Redirecting to login.");
-      window.location.href = "login.html";
+    const productSelect = document.getElementById("productSelect");
+    const reviewsList = document.getElementById("reviewsList");
+
+    // Fetch and populate products dropdown (no token)
+    async function loadProducts() {
+      try {
+        const res = await fetch("http://localhost:3000/api/products");
+        const products = await res.json();
+        products.forEach(product => {
+          const option = document.createElement("option");
+          option.value = product._id;
+          option.textContent = product.name;
+          productSelect.appendChild(option);
+        });
+      } catch (err) {
+        alert("Failed to load products.");
+      }
     }
 
+    loadProducts();
+
+    // Fetch reviews
     document.getElementById("reviewForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const productId = document.getElementById("productId").value;
-      const response = await fetch(`/api/reviews/${productId}`, {
-        headers: {
-          Authorization: `Bearer ${token}`,
-        },
-      });
+      const productId = productSelect.value;
 
-      const data = await response.json();
-      const reviewsList = document.getElementById("reviewsList");
-      reviewsList.innerHTML = "";
+      try {
+        const response = await fetch(`http://localhost:3000/api/reviews/${productId}`);
+        const data = await response.json();
+        reviewsList.innerHTML = "";
 
-      if (Array.isArray(data) && data.length > 0) {
-        data.forEach((review) => {
-          const li = document.createElement("li");
-          li.textContent = `${review.username}: ${review.review}`;
-          reviewsList.appendChild(li);
-        });
-      } else {
-        reviewsList.innerHTML = "<li>No reviews found for this product.</li>";
+        if (Array.isArray(data) && data.length > 0) {
+  reviewsList.innerHTML = "";
+  data.forEach((review) => {
+    const li = document.createElement("li");
+    li.className = "list-group-item";
+    li.textContent = review.review; // Show only review text
+    reviewsList.appendChild(li);
+  });
+} else {
+  reviewsList.innerHTML = `<li class="list-group-item">No reviews found for this product.</li>`;
+}}catch (err) {
+        reviewsList.innerHTML = `<li class="list-group-item text-danger">Error fetching reviews.</li>`;
       }
     });
   </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
